--- a/frontend-01blog/src/app/dashboard/dashboard.component.scss
+++ b/frontend-01blog/src/app/dashboard/dashboard.component.scss
@@ -143,7 +143,12 @@
   gap: 20px;
   align-items: start;
   padding-right: 50px;
-  /* Space for absolute positioned actions at top-right */
+  overflow-wrap: anywhere;
+  word-break: break-word;
+}
+
+.post-snippet {
+  color: white;
 }
 
 /* User item uses simpler flex or simple grid, keeping it flex for now but cleaner */
@@ -203,41 +208,57 @@
 
 :host-context(.dark-mode) {
   .sub-text.dark-mode {
-  color: #000000;
-}
-.dashboard-title {
-  text-align: center;
-  color: #f0eeee;
-  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin-bottom: 30px;
-  font-size: 2rem;
-}
-.view-header h3 {
-  margin: 0;
-  color: #d4d4d4;
-}
-.sub-text {
-  color: #979797;
-}
-.hub-card.icon{
-  color: #ffffff;
-}
-.hub-card.h3{
-  color: #878787;
-}
-.hub-card.p{
-  color: #959595;
-}
+    color: #000000;
+  }
 
-.view-header{
-  color: #ffffff;
-}
-.back-btn {
-  color: #ffffff;
-}
-.main-text {
-  color: #ffffff;
-}
+  .dashboard-title {
+    text-align: center;
+    color: #f0eeee;
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin-bottom: 30px;
+    font-size: 2rem;
+  }
+
+  .view-header h3 {
+    margin: 0;
+    color: #d4d4d4;
+  }
+
+  .sub-text {
+    color: #979797;
+  }
+
+  .hub-card .icon {
+    padding: 15px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+    color: #ffffff;
+  }
+
+
+  .hub-card h3 {
+    margin: 0;
+    color: #878787;
+    font-size: 1.25rem;
+  }
+
+  .hub-card p {
+    color: #959595;
+    margin: 0;
+    font-size: 0.9rem;
+  }
+
+  .view-header {
+    color: #ffffff;
+  }
+
+  .back-btn {
+    color: #ffffff;
+  }
+
+  .main-text {
+    color: #848484;
+  }
 }
 
 /* User Name Highlights - Neutral/White Style */
@@ -262,7 +283,7 @@
 .sub-text {
   font-size: 0.85rem;
   color: #343434;
-} 
+}
 
 
 .header-row {
