--- a/frontend-01blog/src/app/dashboard/dashboard.component.scss
+++ b/frontend-01blog/src/app/dashboard/dashboard.component.scss
@@ -204,6 +204,14 @@
   color: #333;
   font-size: 1rem;
 }
+span.sub-text {
+    color: rgb(71, 85, 105);
+    font-size: 0.8rem;
+    font-weight: 600;
+    background: rgb(226, 232, 240);
+    padding: 2px 8px;
+    border-radius: 6px;
+}
 
 
 :host-context(.dark-mode) {
@@ -223,6 +231,14 @@
     margin: 0;
     color: #d4d4d4;
   }
+  span.sub-text {
+    color: rgb(176, 176, 176);
+    font-size: 0.8rem;
+    font-weight: 600;
+    background: rgb(226, 232, 240);
+    padding: 2px 8px;
+    border-radius: 6px;
+}
 
   .sub-text {
     color: #979797;
