--- a/frontend-01blog/src/app/home/home.component.html
+++ b/frontend-01blog/src/app/home/home.component.html
@@ -117,7 +117,7 @@
             </button>
           </div>
           } @else {
-          @if (loggedIn()) {
+          @if (loggedIn() && post.userId !== currentUserId()) {
           <button (click)="openReportModal(post)" class="action-icon-btn report-btn" title="Report">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
               stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
