--- a/frontend-01blog/src/app/app.component.scss
+++ b/frontend-01blog/src/app/app.component.scss
@@ -67,7 +67,7 @@
   padding: 5px 12px;
   display: flex;
   align-items: center;
-  width: 1050px;
+  // width: 300px;
   transition: all 0.2s;
 }
 
