--- a/frontend-01blog/src/app/auth/register/register.scss
+++ b/frontend-01blog/src/app/auth/register/register.scss
@@ -1,14 +1,14 @@
 :host {
-    min-height: 90vh;
+    // min-height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    // padding: 20px;
 }
 
 .register-box {
     width: 600px;
-    padding: 40px;
+    padding: 30px;
     background: rgba(255, 255, 255, 0.15);
     box-sizing: border-box;
     box-shadow: 0 15px 25px rgba(0, 0, 0, .2);
